kubernetes/03-wildfly-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wildfly-service
    namespace: labs
    labels:
      app: wildfly
      tier: devops
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: wildfly
    tier: devops
