kubernetes/04-wildfly-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: wildfly-ingress
spec:
  rules:
  - host: wildfly.mmagnani.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: wildfly-service
          servicePort: 8080
